[gd_scene load_steps=7 format=2]

[ext_resource path="res://Environment/GravityWell.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/portal2.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/art/portal_large.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[sub_resource type="Animation" id=2]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("portal_large:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Swallow"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("portal_large:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.75, 0.75 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="GravityWell" type="Area2D"]
modulate = Color( 0.231373, 0.215686, 0.360784, 1 )
script = ExtResource( 1 )

[node name="portal_large" type="Sprite" parent="."]
modulate = Color( 2, 1, 2, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpinAnimation" type="AnimationPlayer" parent="."]
anims/Spin = SubResource( 2 )

[node name="SwallowAnimation" type="AnimationPlayer" parent="."]
anims/Swallow = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="animation_finished" from="SwallowAnimation" to="." method="_on_SwallowAnimation_animation_finished"]
